Docs: refactor endpoint sintaxes in clients routs for consistence
